# miniclang

./: .clang-format  CMakeLists.txt  LICENSE  add_miniclang_to_path.sh  build_and_run_tests.sh  cmake_with_brew.sh  readme.md  run_tests.sh
include/: codegen.h  lexer.h  parser.h  type.h
src/: codegen.cpp  lexer.cpp  lexer.h  main.cpp  mini_string.h  parse_declarations.cpp  parse_expressions.cpp  parse_statements.cpp  parser.cpp  parser.h  type.cpp  type.h
tests/: lexer.cpp  parser.cpp
tests/codegen/add_two_numbers/: add.c  add.ll
